--- a/client/dao.jade
+++ b/client/dao.jade
@@ -196,7 +196,7 @@ template(name='tag_selector')
                 img.ui.avatar.image.zoomer(src=term.watson.metadata.image)    
         | #{name}
         // else
-        // small #{count}
+        small #{count}
         
 template(name='select_subreddit')
     // a.ui.basic.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
