add sentiment to emotion, add publish count to sq

--- a/client/q.jade
+++ b/client/q.jade
@@ -192,5 +192,7 @@ template(name='answer_item')
             +flat_tag_selector
             // .ui.tertiary.small.button.say #{this}
         +doc_emotion  
+        .ui.basic.label #{watson.usage.text_characters} characters
+        .ui.basic.label #{content_license}
 
     .ui.divider
