round of single char var fixes

--- a/client/q.jade
+++ b/client/q.jade
@@ -35,7 +35,7 @@ template(name='q')
                     .scrollin
                         if skv_is 'stack_section' 'main'
                             .f11.ui.basic.segment.say !{body}
-                            .ui.horizontal.divider.get_question_comments
+                            .ui.horizontal.divider.get_q_c
                                 i.chat.outline.icon
                                 |#{question_comments.count} comments
                             // div.gb hi everyone
