--- a/client/tag.jade
+++ b/client/tag.jade
@@ -127,7 +127,7 @@ template(name='stack_tag')
                     if skv_is 'stack_section' 'main'
                         .ui.basic.segment
                             .f11.say.zoomer !{body}
-                        .ui.small.grey.header.get_question_comments
+                        .ui.small.grey.header.get_q_c
                             i.chat.outline.icon
                             // |comments
                         each question_comments
