--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,10 +11,10 @@ template(name='nav')
             a.icon.zoomer.item.clear_tags.goto_stack(href='/stack' class="{{isActivePath '/stack'}}" title='stack exchange')
                 i.large.stack.exchange.grey.icon
             a.icon.zoomer.item.clear_tags.goto_dao(href='/' class="{{isActivePath '/'}}" title='search')
-                // if skv_is 'loading'
+                if skv_is 'loading' true
                     i.big.yin.yang.grey.loading.icon
-                // else
-                i.big.yin.yang.grey.icon
+                else
+                    i.big.yin.yang.grey.icon
             a.icon.disabled.item.goto_vid(href='/vid')
                 i.large.grey.github.icon
             a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
